# asyncpg-engine

./: .flake8  .gitignore  Makefile  README.md  asyncpg_engine.py  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
asyncpg_engine/: __init__.py  engine.py  pytest_plugin.py
tests/: conftest.py  test_dummy.py  test_engine.py  test_pytest_plugin.py
tests/pytest_plugin/: test_custom_engine_cls.py  test_non_transactional.py  test_transactional.py
